# aoc-rs

./: .gitignore  .gitmodules  .ignore  2019-workspace.code-workspace  2020-workspace.code-workspace  2021-workspace.code-workspace  Cargo.toml  Makefile.toml  Readme.md  answers.ron  answers.yaml  bacon.toml  compressed.txt  err.txt  flake.nix  graph.dot  out.txt
2015/: Cargo.toml
2015/src/: lib.rs  main.rs
2015/src/sec1/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
2015/src/sec2/: day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
2015/src/sec3/: day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  mod.rs
2015/src/sec4/: day16.rs  day17.rs  day18.rs  day19.rs  day20.rs
2015/src/sec5/: day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
2015/src/utils/: cartesian.rs  mod.rs
2018-2020prep/: Cargo.toml
2018-2020prep/src/: lib.rs  main.rs
2018-2020prep/src/sec1/: day01.rs  day02.rs  day03.rs
2018-2020prep/src/utils/: aabb.rs  mod.rs
2020/: Cargo.toml  rustfmt.toml
2020/src/: lib.rs  main.rs
2020/src/sec1/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  dayxx.rs
2020/src/sec2/: day06.rs  day07.rs  day08.rs  day09.rs  day10.rs
2020/src/sec3/: day11.rs  day12.rs  day13.rs  day14.rs  day15.rs
2020/src/sec4/: day16.rs  day17.rs  day18.rs  day19.rs  day20.rs
2020/src/sec5/: day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
2020/src/utils/: aabb.rs  cartesian.rs  collections.rs  comp.rs  inputs.rs  mod.rs  nums.rs
aoc/: Cargo.toml  answers.yaml  build.rs  readme.md
aoc/proptest-regressions/solutions/y2025/: day01.txt
aoc/solutions/2019/: y19_d03.rs  y19_d18.rs  y19_d20.rs  y19_d22.rs  y19_d24.rs  y19_d25.rs
aoc/solutions/2020/: day01.rs  day02.rs  day04.rs  day05.rs
aoc/solutions/2021/: y21_d16.rs  y21_d18.rs
aoc/src/: lib.rs
aoc/src/solutions/: answers.yaml  mod.rs
aoc/src/solutions/y2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc/src/solutions/y2016/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc/src/solutions/y2017/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc/src/solutions/y2018/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc/src/solutions/y2019/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day22nummodular.rs  day23.rs  day24.rs  day25.rs  mod.rs  y19_d07.rs  y19_d10.rs  y19_d13.rs  y19_d15.rs  y19_d16.rs  y19_d18.rs  y19_d19.rs  y19_d25.rs
aoc/src/solutions/y2020/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc/src/solutions/y2021/: day01.rs  day02.rs  day03.rs  day04.rs  day04mutable.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day14matrix.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs  y21_d01.rs  y21_d04mutable.rs
aoc/src/solutions/y2022/: day01.rs  day02.rs  day02modnums.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07minimal.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc/src/solutions/y2023/: 19_example_graph.dot  20_graph.dot  23_example_graph.dot  23_input.dot  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day07p2.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs  sympy_for_d24.py
aoc/src/solutions/y2024/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc/src/solutions/y2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
aoc/src/utils/: mod.rs  points.rs
aoc2021/: Cargo.toml  readme.md
aoc2021/src/: day1.rs  lib.rs  main.rs
aoc_harness/: Cargo.toml
aoc_harness/libs/macros/: Cargo.toml
aoc_harness/libs/macros_impl/: Cargo.toml
aoc_harness/src/: all.rs  answers.rs  answertype.rs  dayresult.rs  lib.rs
aoc_latest/: Cargo.toml  answers.yaml  build.rs  test.rs
aoc_latest/src/: main.rs
utils/: Cargo.toml  answers.yaml
utils/proptest-regressions/: nums.txt
utils/src/: aabb.rs  algorithms.rs  assembunny.rs  cartesian.rs  cellular_automata.rs  collections.rs  comp.rs  cube.rs  grid2d.rs  imap.rs  inputs.rs  iter.rs  kdtree.rs  knot_hash.rs  lib.rs  linear_programming.rs  nom.rs  nums.rs  numset.rs  numset_bytes.rs  ocr.rs  points.rs  polynomials.rs  prelude.rs  span.rs
utils/src/intcode/: comp_tests.rs  compmem.rs  computer.rs  enums.rs  mod.rs  oparg.rs  opcode.rs
utils/src/ocr/: 10x6.txt  6x4.txt  mod.rs
(+121 files in other folders)
