[workspace]
members = [
    "utils",
    "aoc_harness",
    # "aoc2019", # not ready yet.
    "aoc2021",
]
[profile.release]
debug = true
overflow-checks = true

[profile.dev]
debug = true
overflow-checks = true

[profile.release-lto]
inherits = "release"
debug = false
overflow-checks = false
lto = true

[profile.release-nocheck]
inherits = "release"
debug = false
overflow-checks = false