[workspace]
resolver = "2"
members = [
    "utils",
    "aoc_harness",
    "aoc",
    "aoc_latest"
]

[workspace.lints.clippy]
items_after_test_module = "allow"
semicolon_if_nothing_returned = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
cloned_instead_of_copied = "warn"
# pedantic = "warn"
cast_sign_loss = "allow"
default_trait_access = "warn"
items_after_statements = "warn"
wildcard_imports = "allow"

[profile.release]
debug = true
overflow-checks = true

[profile.dev]
debug = true
overflow-checks = true

# [profile.release-lto]
# inherits = "release"
# debug = false
# overflow-checks = false
# lto = true

# [profile.release-nocheck]
# inherits = "release"
# debug = false
# overflow-checks = false