[package]
name = "aoc-2015-rs"
version = "0.1.0"
authors = ["Greg Manning <greg@gregmanning.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive="0.3.0"
itertools  = "0.8.2"
num_enum = "0.4.2"
rayon = "1.2.1"
transpose = "0.2.0"
num = "0.2.0"
rand = "0.7.2"
regex = "1.3.1"
pathfinding = "2.0.3"
md5 = "0.7.0"
nom = "5.0.1"
reformation = "0.5.0"
json = "0.12.0"
counter = "0.4.3"
primal = "0.2.3"

[profile.release]
debug = true