[package]
name = "aoc-2020-rs"
version = "0.1.0"
authors = ["Greg Manning <greg@gregmanning.uk>"]
description = "Solutions to advent of code 2020"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse-display = "0.4.0"
aoc-runner = "0.3.0"
aoc-runner-derive="0.3.0"
itertools  = "0.9.0"
num_enum = "0.5.1"
rayon = "1.5.0"
transpose = "0.2.0"
num = "0.3.1"
rand = "0.7.3"
regex = "1.4.2"
pathfinding = "2.1.1"
md5 = "0.7.0"
nom = "6.0.1"
reformation = "0.5.0"
json = "0.12.4"
counter = "0.5.2"
primal = "0.3.0"
lazy_static = "1.4.0"
petgraph = "0.5.1"
modinverse = "0.1.1"
grid = "0.2.3"
ndarray = "0.14.0"
bitvec = "0.19.4"

[profile.release]
debug = true
overflow-checks = true

[profile.dev]
debug = true
overflow-checks = true