[package]
name = "aoc-2020-rs"
version = "0.1.0"
authors = ["Greg Manning <greg@gregmanning.uk>"]
description = "Solutions to advent of code 2020"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
parse-display = "0.5.3"
aoc-runner = "0.3.0"
aoc-runner-derive="0.3.0"
itertools  = "0.10.1"
num_enum = "0.5.1"
rayon = "1.5.0"
transpose = "0.2.0"
num = "0.4.0"
rand = "0.8.0"
regex = "1.4.2"
pathfinding = "2.1.1"
md5 = "0.7.0"
nom = "7.0.1"
reformation = "0.5.3"
json = "0.12.4"
counter = "0.5.2"
primal = "0.3.0"
lazy_static = "1.4.0"
petgraph = "0.6"
modinverse = "0.1.1"
grid = "0.6.0"
ndarray = "0.15.3"
bitvec = "0.22.3"
nohash-hasher = "0.2.0"

[profile.release]
debug = true
overflow-checks = true

[profile.dev]
debug = true
overflow-checks = true