[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = {path = "../utils"}
aoc_harness = {path = "../aoc_harness"}
dotenv = "0.15"
itertools = "0.14"
ndarray = "0.17"
nalgebra ="0.34"
pathfinding = "4"
num = "0.4.0"
rayon = "1.5.1"
lazy_static = "1.4.0"
smallvec = "1.7.0"
counter = "0.7"
transpose = "0.2.3"
regex = "1.5.5"
parse-display = "0.10"
automod = "1.0.3"
clap = { version = "4.0.26", features = ["derive"]}
petgraph = "0.8"
bitvec = "1"
nohash-hasher = "0.2"
md5 = "0.8"
nom = "8"
reformation = "0.5"
json = "0.12"
primal = "0.3.0"
bitintr = "0.3.0"
num-traits = "0.2.15"
num-modular = "0.6"

anyhoo = { git = "https://github.com/tranzystorek-io/anyhoo", features = ["reexport"] }
associative_positional_list = { git = "https://github.com/jwhitham/associative_positional_list"}
rustc-hash = "2"
ahash = "0.8.6"
progress_bar = "1.0.5"
rand = "0.9"
gomez = "0.5.0"
statistical = "1.0.0"
qp-trie = "0.8.2"
proptest = "1.9.0"
anstyle = "1.0.13"
z3 = "0.19.5"

[lints]
workspace = true
