[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
aoc_harness_macros = {path = "../aoc_harness_macros"}
aoc_harness = {path = "../aoc_harness"}
sscanf = "0.1.3"
structopt = "0.3"
seq-macro = "0.2.0"
aocf = "0.1.13"
itertools = "0.10.1"
time = "0.3.5"