[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
aoc_harness = {path = "../aoc_harness"}
scan_fmt = "0.2.6"
structopt = "0.3"
seq-macro = "0.2.0"
itertools = "0.10.1"
time = "0.3.5"
criterion = "0.3.5"
bitvec = "0.22.3"
ndarray = "0.15.4"
nalgebra ="0.29.0"

[profile.release]
debug = true
overflow-checks = true

[profile.dev]
debug = true
overflow-checks = true   