[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}
aoc_harness = {path = "../aoc_harness"}
scan_fmt = "0.2.6"
structopt = "0.3"
itertools = "0.10.1"
time = "0.3.5"
ndarray = "0.15.4"
nalgebra ="0.29.0"
pathfinding = "3.0.3"
num = "0.4.0"
dotenv = "0.15.0"
rayon = "1.5.1"
lazy_static = "1.4.0"
intmap = "0.7.1"