[package]
name = "aoc_harness"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14"
ureq = "3"
aoc_harness_macros = { path = "libs/macros"}
serde = {version = "1", features = ["derive"]}
clap = { version = "4.0.26", features = ["derive"]}
chrono = "0.4.23"
benchmarking = "0.4"
ron = "0.12.0"

[lints]
workspace = true
