[package]
name = "aoc_latest"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = {path = "../utils"}
aoc_harness = {path = "../aoc_harness"}
dotenv = "0.15"
clap = { version = "4.0.26", features = ["derive"]}
itertools = "0.10.1"
ndarray = "0.15.4"
nalgebra ="0.31.4"
pathfinding = "3.0.3"
num = "0.4.0"
rayon = "1.5.1"
lazy_static = "1.4.0"
smallvec = "1.7.0"
num_enum = "0.5.4"
counter = "0.5.4"
transpose = "0.2.1"
regex = "1.5.5"
parse-display = "0.6.0"
automod = "1.0.3"
petgraph = "0.6.2"
bitvec = "1"
nohash-hasher = "0.2"
md5 = "0.7"
nom = "7.1"
reformation = "0.5"
json = "0.12"
primal = "0.3.0"
bitintr = "0.3.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
num-modular = "0.5.1"

anyhoo = { git = "https://github.com/tranzystorek-io/anyhoo", features = ["reexport"] }