[package]
name = "aoc_latest"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = {path = "../utils"}
aoc_harness = {path = "../aoc_harness"}
dotenv = "0.15"
itertools = "0.13"
ndarray = "0.16"
nalgebra ="0.33"
pathfinding = "4"
num = "0.4.0"
rayon = "1.5.1"
lazy_static = "1.4.0"
smallvec = "1.7.0"
num_enum = "0.7"
counter = "0.6"
transpose = "0.2.1"
regex = "1.5.5"
parse-display = "0.10"
automod = "1.0.3"
clap = { version = "4.0.26", features = ["derive"]}
petgraph = "0.6.2"
bitvec = "1"
nohash-hasher = "0.2"
md5 = "0.7"
nom = "7.1"
nom-supreme = "0.8.0"
reformation = "0.5"
json = "0.12"
primal = "0.3.0"
bitintr = "0.3.0"
num-derive = "0.4"
num-traits = "0.2.15"
num-modular = "0.6"

anyhoo = { git = "https://github.com/tranzystorek-io/anyhoo", features = ["reexport"] }
associative_positional_list = { git = "https://github.com/jwhitham/associative_positional_list"}
rustc-hash = "2"
ahash = "0.8.6"
progress_bar = "1.0.5"
rand = "0.8.5"
gomez = "0.5.0"

[lints]
workspace = true
