[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_harness = {path = "../aoc_harness"}
num = "0.4.0"
modinverse = "0.1.1"
ndarray = "0.15.3"
itertools = "0.10.3"
num_enum = "0.5.4"
lazy_static = "1.4.0"
indexmap = "1.7.0"
pathfinding = "3.0.12"
reformation = "0.5.3"