[package]
name = "utils"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_harness = {path = "../aoc_harness"}
num = "0.4.0"
modinverse = "0.1.1"
ndarray = "0.17"
itertools = "0.14"
lazy_static = "1.4.0"
indexmap = "2"
pathfinding = "4"
reformation = "0.5.3"
bitintr = "0.3"
parse-display = "0.10"
nom = "8"
ansiterm = "0.12.2"

[dev-dependencies]
proptest = "1.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[lints]
workspace = true
