[package]
name = "aoc_harness_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
aoc_harness_macros_impl = { path = "../macros_impl"}
proc-macro2 = "1.0.32"
syn = "1.0.81"

[dev-dependencies]
dotenv = "0.15.0"