[package]
name = "aoc_harness_macros_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = "1.0.81"
structopt = "0.3"
time = "0.3.5"
aocf = {git = "https://github.com/nuxeh/aocf.git", branch = "nuxeh/html-parsing-as-feature"}
itertools = "0.10.1"